dashboard/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard-ssl
  namespace: kubernetes-dashboard
spec:
  clusterIP: 10.109.172.47
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30443
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
