dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  tls:
    - hosts:
        - kube.home
      secretName: kubernetes-dashboard-certs
  rules:
    - host: kube.home
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 8443
